# zopp

./: .dockerignore  .gitignore  404.html  CLAUDE.md  Cargo.toml  DEMO.md  DEVELOPMENT.md  README.md  ROADMAP.md  TESTING.md  badge.json  codecov.yml  index.html  install.sh  operator.Dockerfile  server.Dockerfile  sitemap.xml
.github/workflows/: audit.yaml  build.yaml  cli-build-test.yaml  cli-release.yaml  coverage.yml  docker.yaml  docs.yaml  e2e.yaml  helm-release.yaml  lint.yaml  test.yaml
.sqlx/: query-0c5174bd9280074f790374b9b2a42ba7acbed164d870d433826ee141fae41f0f.json  query-2159ab9ebbc9f035cd11a02e75bb18ed07cfbe84bc6618525bd61792b7d7e6b0.json  query-46c6da2c72170d08243891b001479239723a82beeba1078e1134de8ba1fea18c.json  query-94663ffa81ef73d02fcc917af0fbc3a8b631974f75b4c4df33893230611e1cd2.json  query-94be28b41c89b36858933a70ef72a4c9511cbc393693256f22d5de1653511501.json
apps/e2e-test/: README.md
apps/e2e-test-k8s/src/: main.rs
apps/e2e-test/src/: main.rs
apps/e2e-tests/: Cargo.toml
apps/e2e-tests/tests/: audit.rs  cli_k8s_sync.rs  demo.rs  invites.rs  k8s.rs  operator_sync.rs  principals.rs  rbac.rs  self_signed_tls.rs  user_permissions.rs
apps/e2e-tests/tests/common/: harness.rs  mod.rs  utils.rs
apps/hello_cli/src/: main.rs
apps/zopp-cli/: Cargo.toml
apps/zopp-cli/src/: cli.rs  client.rs  crypto.rs  grpc.rs  lib.rs  main.rs  passphrase.rs
apps/zopp-cli/tests/: demo.rs  e2e.rs
apps/zopp-operator/: Cargo.toml
apps/zopp-operator/src/: controller.rs  crd.rs  credentials.rs  main.rs  sync.rs
apps/zopp-operator/tests/: operator.rs
apps/zopp-server/: Cargo.toml
apps/zopp-server/src/: backend.rs  main.rs  server.rs  tests.rs
apps/zopp-server/src/handlers/: audit.rs  auth.rs  environments.rs  group_permissions.rs  groups.rs  invites.rs  mod.rs  permissions.rs  principals.rs  projects.rs  secrets.rs  user_permissions.rs  workspaces.rs
assets/css/: styles.ac90e001.css
assets/js/: 1000.f98cad96.js  1169.9ecc1872.js  1203.9bb3f548.js  14c6a9f3.07562364.js  152bcf58.d8e8bf98.js  165.b9b5a5c3.js  1741.80f869cb.js  1746.dfddfa0b.js  17896441.8674bf22.js  1a3c9b31.82c01c6a.js  2130.b7bcdd79.js  2237.86eddeef.js  2279.c76c987c.js  2291.77adbd93.js  2325.a1a41f2e.js  2492.16035cd4.js  255db200.982d35cc.js  255db200.cbff0faa.js  2821.a170da60.js  291.e52004bc.js  306919cb.e0b13c5f.js  3403fa84.a92d9dec.js  3490.8f3bf181.js  3563b6a6.24c0f6b5.js  3815.72054824.js  3b119f0b.09c88152.js  3b119f0b.222dea9c.js  4250.c7273972.js  4616.e2b3c028.js  4801.cdd7ff87.js  4802.0c6f0f63.js  4981.da1eb625.js  50ab13c0.f792bac4.js  5480.40dad08c.js  5731e85f.9e7b7f42.js  5901.eaccdd79.js  5955.2e72885d.js  5996.d6ee4e22.js  59bd6ca1.fe7d1b12.js  5e95c892.aa536208.js  (+58 more)
charts/zopp/: Chart.yaml  README.md  values.yaml
charts/zopp/templates/: server-deployment.yaml
charts/zopp/values-examples/: postgres.yaml
contributing/: DOCUMENTING.md  RELEASING.md  TESTING.md
coverage/html/: index.html
crates/zopp-config/: Cargo.toml
crates/zopp-config/src/: lib.rs
crates/zopp-crypto/: Cargo.toml
crates/zopp-crypto/src/: lib.rs
crates/zopp-events/: Cargo.toml
crates/zopp-events-memory/: Cargo.toml
crates/zopp-events-memory/src/: lib.rs
crates/zopp-events-postgres/: Cargo.toml
crates/zopp-events-postgres/src/: lib.rs
crates/zopp-events/src/: lib.rs
crates/zopp-proto/: Cargo.toml  README.md  build.rs
crates/zopp-proto/proto/: zopp.proto
crates/zopp-proto/src/: lib.rs
crates/zopp-secrets/: Cargo.toml
crates/zopp-secrets/src/: lib.rs
crates/zopp-storage/: Cargo.toml
crates/zopp-storage/src/: lib.rs
crates/zopp-store-postgres/: Cargo.toml
crates/zopp-store-postgres/.sqlx/: query-142f747bc105c000af48cc7c7783565435a412b03bab2f030477ebdff0c1a346.json  query-40a6f43516e6d15bc766883ac871fe3eb3f3ed72c2816eb25184d02fe065f59f.json  query-9830068dd42ab276f4180eefda227b3e0f9a35d50839bc6248e2235f754d98b7.json  query-e75644ead623f0f745d52a5d8bc72e925e6223676d67bcb30e31f02ddb38b9d3.json
crates/zopp-store-postgres/migrations/: 20251230171100_init.sql  20260115000001_add_principal_exports.sql
crates/zopp-store-postgres/src/: lib.rs  tests.rs
crates/zopp-store-sqlite/: Cargo.toml
crates/zopp-store-sqlite/.sqlx/: query-4fd46014fbc18f4e433129a95e6875b38ae1965b3626cfb235bc0859ff3e732e.json  query-b3e29894376cf68dfa650f54d31cf8ad171d9b1be6baf43c615c330a5d5d2e6a.json  query-b8a2cb676386c1a18a82f9ebf31f43189dc791e5df1a5472388b5b5f0b0d175a.json  query-bd1b40d699d8adef2816a0e9ae1124ed5cc404539c605eeaaef882957ad804f7.json
crates/zopp-store-sqlite/migrations/: 20251026125600_init.sql  20260115000001_add_principal_exports.sql
crates/zopp-store-sqlite/src/: lib.rs
crates/zopp-store-sqlite/tests/: sqlite_smoke.rs
docs/: astro.config.mjs  package-lock.json  package.json
docs/docs/guides/: joining-a-team.md
docs/docs/self-hosting/: docker-compose.md
docs/src/styles/: custom.css
examples/docker-compose/: docker-compose.production.yml
guides/: index.html
guides/ci-cd/: index.html
guides/core-concepts/: index.html
guides/import-export/: index.html
guides/joining-a-team/: index.html
guides/kubernetes-operator/: index.html
guides/team-collaboration/: index.html
installation/: index.html
installation/cli/: index.html
installation/docker/: index.html
installation/kubernetes/: index.html
quickstart/: index.html
reference/: index.html
reference/cli/: index.html
reference/cli/audit/: index.html
reference/cli/diff/: index.html
reference/cli/environment/: index.html
reference/cli/group/: index.html
reference/cli/invite/: index.html
reference/cli/join/: index.html
reference/cli/permission/: index.html
reference/configuration/: index.html
reference/environment-variables/: index.html
scripts/: e2e-coverage.sh  unit-coverage.sh
security/: index.html
security/architecture/: index.html
security/cryptography/: index.html
self-hosting/: index.html
self-hosting/database/: index.html
self-hosting/docker-compose/: index.html
self-hosting/server/: index.html
self-hosting/tls/: index.html
xtask/: Cargo.toml
(+109 files in other folders)
