[package]
name = "e2e-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-rustls"] }

# For Kubernetes tests
kube = { workspace = true }
k8s-openapi = { workspace = true }

# For graceful shutdown (coverage collection)
nix = { version = "0.29", features = ["signal"] }

# For macro-based test name generation
paste = "1.0"

[[test]]
name = "demo"
path = "tests/demo.rs"

[[test]]
name = "k8s"
path = "tests/k8s.rs"

[[test]]
name = "rbac"
path = "tests/rbac.rs"

[[test]]
name = "principals"
path = "tests/principals.rs"

[[test]]
name = "audit"
path = "tests/audit.rs"

[[test]]
name = "groups"
path = "tests/groups.rs"

[[test]]
name = "invites"
path = "tests/invites.rs"

[[test]]
name = "projects"
path = "tests/projects.rs"

[[test]]
name = "environments"
path = "tests/environments.rs"

[[test]]
name = "user_permissions"
path = "tests/user_permissions.rs"
