[package]
name = "zopp-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { workspace = true }
chacha20poly1305 = { workspace = true }
rand_core = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
x25519-dalek = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
trybuild = { workspace = true }
