[package]
name = "zopp-events-memory"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
zopp-events = { path = "../zopp-events" }
zopp-storage = { path = "../zopp-storage" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "time"] }
uuid = { workspace = true }
