[package]
name = "zopp-events-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "In-memory event bus implementation for zopp"

[dependencies]
async-trait = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
zopp-events = { path = "../zopp-events", version = "0.1.0" }
zopp-storage = { path = "../zopp-storage", version = "0.1.0" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "time"] }
uuid = { workspace = true }
