[package]
name = "zopp-store-postgres"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
rand_core = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-native-tls", "migrate", "macros", "chrono", "uuid"] }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
zopp-storage = { path = "../../crates/zopp-storage" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "time"] }
sha2 = { workspace = true }
