[package]
name = "zopp-store-sqlite"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
hex = { workspace = true }
rand_core = { workspace = true }
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio-native-tls", "migrate", "macros", "chrono"] }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
zopp-storage = { path = "../../crates/zopp-storage" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
